# rustweatherapi

./: Cargo.toml
src/: main.rs
templates/: weather.html
