[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
axum = "0.7.4"
# async HTTP client
reqwest = {version = "0.11.20", features = ["json"]}
# serialization/deserialization for JSON
serde = {version="1.0.188", features = ['derive']}
sqlx = "0.7.1"
# async runtime
tokio = {version = "1.32.0", features= ["full"]}
